--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content= fill=dcurrentColorice fill, currentColoritial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Mark Explorer</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./static/css/styles.css" />
   </head>
   <body>
-   
-    <script src="./js/scripts.js"></script>
+    <div id="app">
+      <!-- this the mounted div -->
+    </div>
+    <script src="./static/js/vue.js"></script>
+    <script src="./static/js/package.json"></script>
+    <script src="./static/js/scripts.js"></script>
   </body>
 </html>
