--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="app">
-      <!-- this the mounted div -->
+      <!-- this is the mounted div -->
     </div>
     <script src="./static/js/vue.js"></script>
     <script src="./static/js/package.json"></script>
