--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="js/generate.js"></script>
 </html>
